--- a/index.html
+++ b/index.html
@@ -11,14 +11,8 @@
       #exec-bio {
         background-color: lightgray;
       }
-      #skill-1 {
-        background-color: orange;
-      }
       .bio-box {
         border: 1px solid black;
-      }
-      .bio-box-b {
-        background-color: black;
       }
       .bio-box a {
         color: green;
@@ -29,7 +23,7 @@
   <body>
     <h1>I'm an h1</h1>
     <ul>
-      <li id="skill-1">
+      <li>
         <a href="https://example.com/">Link</a>
       </li>
       <li>
@@ -41,16 +35,16 @@
     </ul>
 
     <h2>I'm an h2</h2>
-    <div id="exec-bio" class="bio-box bio-box-b">
+    <div id="exec-bio" class="bio-box">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box bio-box-b">
+    <div class="bio-box">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box bio-box-b">
+    <div class="bio-box">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box bio-box-b">
+    <div class="bio-box">
       <a href="https://example.com/">I'm a link</a>
     </div>
   </body>
