update index.html create .highlight class

--- a/index.html
+++ b/index.html
@@ -17,13 +17,19 @@
       .bio-box a {
         color: green;
       }
+      #exec-skill {
+        background-color: orange;
+      }
+      .highlight {
+        background-color: blue;
+      }
     </style>
   </head>
 
   <body>
     <h1>I'm an h1</h1>
     <ul>
-      <li>
+      <li id="exec-skill">
         <a href="https://example.com/">Link</a>
       </li>
       <li>
@@ -35,16 +41,16 @@
     </ul>
 
     <h2>I'm an h2</h2>
-    <div id="exec-bio" class="bio-box">
+    <div id="exec-bio" class="bio-box highlight">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box">
+    <div class="bio-box highlight">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box">
+    <div class="bio-box highlight">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box">
+    <div class="bio-box highlight">
       <a href="https://example.com/">I'm a link</a>
     </div>
   </body>
