Add style with flexbox

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 ---
-
-<div class="full-hero hero-home">
+<div class="home">
+  <div class="full-hero hero-home">
   <div class="hero-content">
     <h1>CODE DANGEROUSLY</h1>
       <ul class="social-list social-hero">
@@ -98,4 +98,5 @@ layout: default
       </div>
     </div>
   </div>
+</div>
 </div>
